force-app/main/default/objects/Zuora__PaymentMethod__c/Zuora__PaymentMethod__c.object-meta.xml
<CustomObject>
    <description>PaymentMethod contains information on how the contact pays for the account. In order to activate an account, you need to create a payment method.</description>
    <label>Payment Method</label>
    <nameField>
        
        <label>Payment Method Name</label>
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>