force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__AchAbaCode__c.field-meta.xml
<CustomField>
    <fullName>Zuora__AchAbaCode__c</fullName>
    <description>This is the nine-digit routing number or ABA number used by banks.
This field is required only when defining an ACH payment method.</description>
    <inlineHelpText>This is the nine-digit routing number or ABA number used by banks.
This field is required only when defining an ACH payment method.</inlineHelpText>
    <label>Ach Aba Code</label>
    <length>9</length>
    <type>Text</type>
</CustomField>