force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__AchAccountName__c.field-meta.xml
<CustomField>
    <fullName>Zuora__AchAccountName__c</fullName>
    <description>This is the name of the account holder (a person or a company).</description>
    <inlineHelpText>This is the name of the account holder (a person or a company).</inlineHelpText>
    <label>Ach Account Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>