force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__AchAccountNumberMask__c.field-meta.xml
<CustomField>
    <fullName>Zuora__AchAccountNumberMask__c</fullName>
    <description>This is a mask to help hide the account number. For example: XXXXXXXXX54321</description>
    <inlineHelpText>This is a mask to help hide the account number. For example: XXXXXXXXX54321</inlineHelpText>
    <label>Ach Account Number Mask</label>
    <length>32</length>
    <type>Text</type>
</CustomField>