force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__AchAccountType__c.field-meta.xml
<CustomField>
    <fullName>Zuora__AchAccountType__c</fullName>
    <description>Type of bank account, this ACH payment is coming from.</description>
    <inlineHelpText>Type of bank account, this ACH payment is coming from.</inlineHelpText>
    <label>Ach Account Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>BusinessChecking</fullName>
                
                
                    <label>BusinessChecking</label>
                
                </value>
            
                <value>
                
                    <fullName>Checking</fullName>
                
                
                    <label>Checking</label>
                
                </value>
            
                <value>
                
                    <fullName>Saving</fullName>
                
                
                    <label>Saving</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>