force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__AchBankName__c.field-meta.xml
<CustomField>
    <fullName>Zuora__AchBankName__c</fullName>
    <description>This is the name of the bank where the ACH payment account is held.</description>
    <inlineHelpText>This is the name of the bank where the ACH payment account is held.</inlineHelpText>
    <label>Ach Bank Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>