force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__Active__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies which payment methods are allowed within Zuora. The default value is false.</description>
    <inlineHelpText>Specifies which payment methods are allowed within Zuora. The default value is false.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>