force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__BankBranchCode__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BankBranchCode__c</fullName>
    <description>The branch code of the bank used for Direct Debit.</description>
    <inlineHelpText>The branch code of the bank used for Direct Debit.</inlineHelpText>
    <label>Bank Branch Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>