force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__BankCheckDigit__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BankCheckDigit__c</fullName>
    <description>The check digit used in the International Bank Account Number to confirm the validity of the Account.</description>
    <inlineHelpText>The check digit used in the International Bank Account Number to confirm the validity of the Account.</inlineHelpText>
    <label>Bank Check Digit</label>
    <length>2</length>
    <type>Text</type>
</CustomField>