force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__BankCity__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BankCity__c</fullName>
    <description>The city for the address of the bank used for Direct Debit.</description>
    <inlineHelpText>The city for the address of the bank used for Direct Debit.</inlineHelpText>
    <label>Bank City</label>
    <length>35</length>
    <type>Text</type>
</CustomField>