force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__BankCode__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BankCode__c</fullName>
    <description>The code or number that identifies the bank. This is also known as the sort code.</description>
    <inlineHelpText>The code or number that identifies the bank. This is also known as the sort code.</inlineHelpText>
    <label>Bank Code</label>
    <length>9</length>
    <type>Text</type>
</CustomField>