force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__BankIdentificationNumber__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BankIdentificationNumber__c</fullName>
    <description>This is the first six digits of the PaymentMethod, such as the credit card number or account number.</description>
    <inlineHelpText>This is the first six digits of the PaymentMethod, such as the credit card number or account number.</inlineHelpText>
    <label>Bank Identification Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>