force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__BankName__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BankName__c</fullName>
    <description>The name of the bank used for DirectDebit.</description>
    <inlineHelpText>The name of the bank used for DirectDebit.</inlineHelpText>
    <label>Bank Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>