force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__BankPostalCode__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BankPostalCode__c</fullName>
    <description>he postal code of the bank used for Direct Debit.</description>
    <inlineHelpText>he postal code of the bank used for Direct Debit.</inlineHelpText>
    <label>Bank Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>