force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__BankStreetName__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BankStreetName__c</fullName>
    <description>The name of the street for the address of the bank used for Direct Debit.</description>
    <inlineHelpText>The name of the street for the address of the bank used for Direct Debit.</inlineHelpText>
    <label>Bank Street Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>