force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__BankStreetNumber__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BankStreetNumber__c</fullName>
    <description>The number for the street address of the bank used for Direct Debit.</description>
    <inlineHelpText>The number for the street address of the bank used for Direct Debit.</inlineHelpText>
    <label>Bank Street Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>