force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__BankTransferAccountName__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BankTransferAccountName__c</fullName>
    <description>The name on the bank account used for direct debit.</description>
    <inlineHelpText>The name on the bank account used for direct debit.</inlineHelpText>
    <label>Bank Transfer Account Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>