force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__BankTransferAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BankTransferAccountNumber__c</fullName>
    <description>The account number for of the customer&apos;s bank account.</description>
    <inlineHelpText>The account number for of the customer&apos;s bank account.</inlineHelpText>
    <label>Bank Transfer Account Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>