force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__BankTransferAccountType__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BankTransferAccountType__c</fullName>
    <description>This field is used only for the DirectDebit payment method.</description>
    <inlineHelpText>This field is used only for the DirectDebit payment method.</inlineHelpText>
    <label>Bank Transfer Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>