force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__BankTransferType__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BankTransferType__c</fullName>
    <description>This is specifies the type of DirectDebit that is being used. The value of this field is dependent on the country of the user.</description>
    <inlineHelpText>This is specifies the type of DirectDebit that is being used. The value of this field is dependent on the country of the user.</inlineHelpText>
    <label>Bank Transfer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>