force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__BillingAccount__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BillingAccount__c</fullName>
    <label>Billing Account</label>
    <referenceTo>Zuora__CustomerAccount__c</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>