force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__BusinessIdentificationCode__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BusinessIdentificationCode__c</fullName>
    <description>Use this field when creating a direct debit payment method for Switzerland when using the GlobalCollect payment gateway.</description>
    <inlineHelpText>Use this field when creating a direct debit payment method for Switzerland when using the GlobalCollect payment gateway.</inlineHelpText>
    <label>Business Identification Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>