force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__City__c.field-meta.xml
<CustomField>
    <fullName>Zuora__City__c</fullName>
    <description>The city of the customer&apos;s address.</description>
    <inlineHelpText>The city of the customer&apos;s address.</inlineHelpText>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>