force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__Country__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Country__c</fullName>
    <description>The two-letter country code of the customer&apos;s country.</description>
    <inlineHelpText>The two-letter country code of the customer&apos;s country.</inlineHelpText>
    <label>Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>