force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__CreatedById__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CreatedById__c</fullName>
    <description>Zuora system automatically generates this ID of the user who created the Payment Method.</description>
    <inlineHelpText>Zuora system automatically generates this ID of the user who created the Payment Method.</inlineHelpText>
    <label>Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>