force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CreatedDate__c</fullName>
    <description>Zuora system automatically generates this date when the payment method is created.</description>
    <inlineHelpText>Zuora system automatically generates this date when the payment method is created.</inlineHelpText>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>