force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__CreditCardAddress1__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CreditCardAddress1__c</fullName>
    <description>The first line of the billing address for the credit or debit card holder.</description>
    <inlineHelpText>The first line of the billing address for the credit or debit card holder.</inlineHelpText>
    <label>Credit Card Address1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>