force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__CreditCardAddress2__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CreditCardAddress2__c</fullName>
    <description>The second line of the billing address for the credit or debit card holder.</description>
    <inlineHelpText>The second line of the billing address for the credit or debit card holder.</inlineHelpText>
    <label>Credit Card Address2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>