force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__CreditCardCity__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CreditCardCity__c</fullName>
    <description>The billing address&apos;s city.</description>
    <inlineHelpText>The billing address&apos;s city.</inlineHelpText>
    <label>Credit Card City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>