force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__CreditCardCountry__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CreditCardCountry__c</fullName>
    <description>The country in which the billing address is located. Country names must be spelled in full.</description>
    <inlineHelpText>The country in which the billing address is located. Country names must be spelled in full.</inlineHelpText>
    <label>Credit Card Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>