force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__CreditCardExpirationMonth__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CreditCardExpirationMonth__c</fullName>
    <label>Credit Card Expiration Month</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>3</fullName>
                
                
                    <label>3</label>
                
                </value>
            
                <value>
                
                    <fullName>4</fullName>
                
                
                    <label>4</label>
                
                </value>
            
                <value>
                
                    <fullName>5</fullName>
                
                
                    <label>5</label>
                
                </value>
            
                <value>
                
                    <fullName>6</fullName>
                
                
                    <label>6</label>
                
                </value>
            
                <value>
                
                    <fullName>7</fullName>
                
                
                    <label>7</label>
                
                </value>
            
                <value>
                
                    <fullName>8</fullName>
                
                
                    <label>8</label>
                
                </value>
            
                <value>
                
                    <fullName>9</fullName>
                
                
                    <label>9</label>
                
                </value>
            
                <value>
                
                    <fullName>10</fullName>
                
                
                    <label>10</label>
                
                </value>
            
                <value>
                
                    <fullName>11</fullName>
                
                
                    <label>11</label>
                
                </value>
            
                <value>
                
                    <fullName>12</fullName>
                
                
                    <label>12</label>
                
                </value>
            
                <value>
                
                    <fullName>1</fullName>
                
                
                    <label>1</label>
                
                </value>
            
                <value>
                
                    <fullName>2</fullName>
                
                
                    <label>2</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>