force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__CreditCardExpirationYear__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CreditCardExpirationYear__c</fullName>
    <description>The expiration year of the credit or debit card.</description>
    <inlineHelpText>The expiration year of the credit or debit card.</inlineHelpText>
    <label>Credit Card Expiration Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>