force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__CreditCardHolderName__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CreditCardHolderName__c</fullName>
    <description>The full name (first or personal and last or family) of the holder of the credit or debit card.</description>
    <inlineHelpText>The full name (first or personal and last or family) of the holder of the credit or debit card.</inlineHelpText>
    <label>Credit Card Holder Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>