force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__CreditCardMaskNumber__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CreditCardMaskNumber__c</fullName>
    <description>A masked version of the credit or debit card number.</description>
    <inlineHelpText>A masked version of the credit or debit card number.</inlineHelpText>
    <label>Credit Card Mask Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>