force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__CreditCardPostalCode__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CreditCardPostalCode__c</fullName>
    <description>The billing address&apos;s postal code.</description>
    <inlineHelpText>The billing address&apos;s postal code.</inlineHelpText>
    <label>Credit Card Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>