force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__CreditCardState__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CreditCardState__c</fullName>
    <description>The billing address&apos;s state.</description>
    <inlineHelpText>The billing address&apos;s state.</inlineHelpText>
    <label>Credit Card State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>