force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__CreditCardType__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CreditCardType__c</fullName>
    <description>The type of credit or debit card that is being billed.</description>
    <inlineHelpText>The type of credit or debit card that is being billed.</inlineHelpText>
    <label>Credit Card Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>AmericanExpress</fullName>
                
                
                    <label>AmericanExpress</label>
                
                </value>
            
                <value>
                
                    <fullName>Discover</fullName>
                
                
                    <label>Discover</label>
                
                </value>
            
                <value>
                
                    <fullName>MasterCard</fullName>
                
                
                    <label>MasterCard</label>
                
                </value>
            
                <value>
                
                    <fullName>Visa</fullName>
                
                
                    <label>Visa</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>