force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__DefaultPaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>Zuora__DefaultPaymentMethod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default payment method or not</description>
    <inlineHelpText>Default payment method or not</inlineHelpText>
    <label>Default Payment Method</label>
    <type>Checkbox</type>
</CustomField>