force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__DeviceSessionId__c.field-meta.xml
<CustomField>
    <fullName>Zuora__DeviceSessionId__c</fullName>
    <description>This is the (web) session ID of the user when the PaymentMethod was created or updated.</description>
    <inlineHelpText>This is the (web) session ID of the user when the PaymentMethod was created or updated.</inlineHelpText>
    <label>Device Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>