force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__Email__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Email__c</fullName>
    <description>The email address connected to the PaymentMethod.</description>
    <inlineHelpText>The email address connected to the PaymentMethod.</inlineHelpText>
    <label>Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>