force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__FirstName__c.field-meta.xml
<CustomField>
    <fullName>Zuora__FirstName__c</fullName>
    <description>The customer&apos;s first name.</description>
    <inlineHelpText>The customer&apos;s first name.</inlineHelpText>
    <label>First Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>