force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__IBAN__c.field-meta.xml
<CustomField>
    <fullName>Zuora__IBAN__c</fullName>
    <description>The International Bank Account Number.</description>
    <inlineHelpText>The International Bank Account Number.</inlineHelpText>
    <label>IBAN</label>
    <length>64</length>
    <type>Text</type>
</CustomField>