force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__IPAddress__c.field-meta.xml
<CustomField>
    <fullName>Zuora__IPAddress__c</fullName>
    <description>This is the IP address of the user when the PaymentMethod was created or updated</description>
    <inlineHelpText>This is the IP address of the user when the PaymentMethod was created or updated</inlineHelpText>
    <label>IP Address</label>
    <length>15</length>
    <type>Text</type>
</CustomField>