force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__LastFailedSaleTransactionDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__LastFailedSaleTransactionDate__c</fullName>
    <description>The is the date of the last failed attempt at collecting payment with this payment method.</description>
    <inlineHelpText>The is the date of the last failed attempt at collecting payment with this payment method.</inlineHelpText>
    <label>Last Failed Sale Transaction Date</label>
    <type>DateTime</type>
</CustomField>