force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__LastName__c.field-meta.xml
<CustomField>
    <fullName>Zuora__LastName__c</fullName>
    <description>The customer&apos;s last name.</description>
    <inlineHelpText>The customer&apos;s last name.</inlineHelpText>
    <label>Last Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>