force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__LastTransactionDateTime__c.field-meta.xml
<CustomField>
    <fullName>Zuora__LastTransactionDateTime__c</fullName>
    <description>The date of the most recent transaction.</description>
    <inlineHelpText>The date of the most recent transaction.</inlineHelpText>
    <label>Last Transaction DateTime</label>
    <type>DateTime</type>
</CustomField>