force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__LastTransactionStatus__c.field-meta.xml
<CustomField>
    <fullName>Zuora__LastTransactionStatus__c</fullName>
    <description>The status of the most recent transaction.</description>
    <inlineHelpText>The status of the most recent transaction.</inlineHelpText>
    <label>Last Transaction Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>