force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__MandateCreation_Date__c.field-meta.xml
<CustomField>
    <fullName>Zuora__MandateCreation_Date__c</fullName>
    <label>Mandate Creation Date</label>
    <type>Date</type>
</CustomField>