force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__MandateCreationDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__MandateCreationDate__c</fullName>
    <label>Mandate Creation Date (Deprecated)</label>
    <type>DateTime</type>
</CustomField>