force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__MandateID__c.field-meta.xml
<CustomField>
    <fullName>Zuora__MandateID__c</fullName>
    <label>MandateID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>