force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__MandateReceived__c.field-meta.xml
<CustomField>
    <fullName>Zuora__MandateReceived__c</fullName>
    <label>Mandate Received</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Yes</fullName>
                
                
                    <label>Yes</label>
                
                </value>
            
                <value>
                
                    <fullName>No</fullName>
                
                
                    <label>No</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>