force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__MandateUpdate_Date__c.field-meta.xml
<CustomField>
    <fullName>Zuora__MandateUpdate_Date__c</fullName>
    <label>Mandate Update Date</label>
    <type>Date</type>
</CustomField>