force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__MandateUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__MandateUpdateDate__c</fullName>
    <label>Mandate UpdateDate (Deprecated)</label>
    <type>DateTime</type>
</CustomField>