force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__MaxConsecutivePaymentFailures__c.field-meta.xml
<CustomField>
    <fullName>Zuora__MaxConsecutivePaymentFailures__c</fullName>
    <description>Specifies the number of allowable consecutive failures</description>
    <inlineHelpText>Specifies the number of allowable consecutive failures</inlineHelpText>
    <label>Max Consecutive Payment Failures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>