force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__Name__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Name__c</fullName>
    <label>Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>