force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__NumConsecutiveFailures__c.field-meta.xml
<CustomField>
    <fullName>Zuora__NumConsecutiveFailures__c</fullName>
    <label>Number of Consecutive Failures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>