force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__PaymentMethodStatus__c.field-meta.xml
<CustomField>
    <fullName>Zuora__PaymentMethodStatus__c</fullName>
    <description>Specify the status of the payment method, either Active or Closed.</description>
    <inlineHelpText>Specify the status of the payment method, either Active or Closed.</inlineHelpText>
    <label>Payment Method Status</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Active</fullName>
                
                
                    <label>Active</label>
                
                </value>
            
                <value>
                
                    <fullName>Closed</fullName>
                
                
                    <label>Closed</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>