force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__PaymentRetryWindow__c.field-meta.xml
<CustomField>
    <fullName>Zuora__PaymentRetryWindow__c</fullName>
    <description>Use the retry interval setting to prevent a payment attempt if the last failed payment was within the last number of hours.</description>
    <inlineHelpText>Use the retry interval setting to prevent a payment attempt if the last failed payment was within the last number of hours.</inlineHelpText>
    <label>Payment Retry Window</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>