force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__PaypalBaid__c.field-meta.xml
<CustomField>
    <fullName>Zuora__PaypalBaid__c</fullName>
    <description>The PayPal billing agreement ID.</description>
    <inlineHelpText>The PayPal billing agreement ID.</inlineHelpText>
    <label>Paypal Baid</label>
    <length>64</length>
    <type>Text</type>
</CustomField>