force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__PaypalEmail__c.field-meta.xml
<CustomField>
    <fullName>Zuora__PaypalEmail__c</fullName>
    <description>The email address associated with the account holder&apos;s PayPal account</description>
    <inlineHelpText>The email address associated with the account holder&apos;s PayPal account</inlineHelpText>
    <label>Paypal Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>