force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__PaypalPreapprovalKey__c.field-meta.xml
<CustomField>
    <fullName>Zuora__PaypalPreapprovalKey__c</fullName>
    <description>This is a key that is obtained from PayPal&apos;s Adaptive Payments API.</description>
    <inlineHelpText>This is a key that is obtained from PayPal&apos;s Adaptive Payments API.</inlineHelpText>
    <label>Paypal Pre-approval Key</label>
    <length>32</length>
    <type>Text</type>
</CustomField>