force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__PaypalType__c.field-meta.xml
<CustomField>
    <fullName>Zuora__PaypalType__c</fullName>
    <description>Specifies which PayPal gateway, either PayFlow Pro (Express Checkout) or Adaptive Payments.</description>
    <inlineHelpText>Specifies which PayPal gateway, either PayFlow Pro (Express Checkout) or Adaptive Payments.</inlineHelpText>
    <label>Paypal Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>ExpressCheckout</fullName>
                
                
                    <label>ExpressCheckout</label>
                
                </value>
            
                <value>
                
                    <fullName>AdaptivePayments</fullName>
                
                
                    <label>AdaptivePayments</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>