force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__Phone__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Phone__c</fullName>
    <description>The phone number that the account holder registered with the bank.</description>
    <inlineHelpText>The phone number that the account holder registered with the bank.</inlineHelpText>
    <label>Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>