force-app/main/default/objects/Zuora__PaymentMethod__c/fields/Zuora__PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Zuora__PostalCode__c</fullName>
    <description>The postal code of the customer&apos;s address.</description>
    <inlineHelpText>The postal code of the customer&apos;s address.</inlineHelpText>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>